--- a/about.html
+++ b/about.html
@@ -95,12 +95,12 @@
 
 
 
-          <!-- ======= About Section ======= -->
-    <section id="about" style="padding-top: 20px;">
+          <!-- ======= TODO: About Section ======= -->
+    <section id="about" style="padding-top: 30px;">
       <div class="container section-header" style="margin-bottom: 0px;" data-aos="fade-up">
         <div class="row">
           <div class="content">
-            <h2 class="lang">О нас</h2>
+            <h2 class="lang text-center">О нас</h2>
               <h3 class="lang header" key="about2"></h3>
               <p>Частное охранное предприятие «Зехинли доганлар» основано в 22-го июня 2016 года и перерегистрировано 29-го  мая 2020 года как хозяйственное общество, чтобы приобрести дополнительные коды по ГКВЭД. Предприятие действует на основании Единого государственного реестра № 24594443 от 29-го мая 2020 года и Устава предприятия, выданного Министерством Экономики и Развития Туркменистана.</p>
               <p>Основной деятельностью хозяйственного общество является предоставления охранных услуг, специализирующейся на услугах по физической и пультовой  охране объектов, и их периметра. В перечень услуг компании входят  невооруженная охрана объектов и имущества, обеспечение внутри объектного и пропускного режима на объектах, монтаж и техническое обслуживание охранной и тревожной сигнализации. Компания предоставляет охранные услуги как частным лицам, так и мелким и крупным предприятиям, а так же иностранным компаниям, работающим на территории Туркменистана.</p>
@@ -111,24 +111,30 @@
               <p>Хозяйственное общество «Зехинли доганлар» активно участвует в тендерах, проводимых иностранными компаниями таких как CNPC International (T-n), ENI (T-n), Petronas Çarigali (T-n), работающих на основании договора  по распределению продукции и Закона Туркменистана «Об углеводородных ресурсах», а так же южнокорейской компании «Hyundai Engineering Co. Ltd».</p>
               <p>Цель компании соответствует его девизу «Целостность и сохранность», так как основной задачей является принятие оперативных мер по предотвращению несанкционированных проникновений, а так же обеспечения целостности и сохранности имущества охраняемого объекта.</p>
               <p>Обратитесь к нам и Вы сохраните свое имущество в целостности и сохранности!</p>
-
-            <!-- <ul>
-              <li><i class="bi bi-check-circle lang"></i></li>
-              <li><i class="bi bi-check-circle lang"></i></li>
-            </ul> -->
-            <br>
           </div>
         </div>
       </div>
     </section><!-- End About Section -->
 
+              <!-- ======= TODO: Diversifikasiya ======= -->
+              <section id="about" style="padding-top: 50px;">
+                <div class="container section-header" style="margin-bottom: 0px;" data-aos="fade-up">
+                  <div class="row">
+                    <div class="content">
+                      <h2 class="lang text-center">ДИВЕРСИФИКАЦИЯ ПРЕДПРИЯТИЯ</h2>
+                        <h3 class="lang header" key="about2"></h3>
+                        <p>С целью диверсификации деятельности хозяйственного общества в 2020 году была налажена работа по техническому обслуживанию автомобилей и предоставления услуг по общественному питанию, а также в январе 2021 года был заключен контракт с Агентством Государственной рыбоохраны и контролю за водными биоресурсами Туркменистана по добыче рыбы и биоресурсов  на Туркменской части акватории Каспийского моря. Кроме этого предприятие держит торговые отношения с такими странами как ОАЭ, Китай, Турция, Россия, Азербайджан и Казахстан.</p>
+                    </div>
+                  </div>
+                </div>
+              </section><!-- End Diversifikasiya -->
     
 
     <!-- Start of How We work section -->
     <section class="container">
 
       <div class="section-header">
-        <h2 class="whywe lang" key="why_we"><br>КАК МЫ РАБОТАЕМ</h2>
+        <h2 class="whywe lang" key="why_we" data-aos="fade-up"><br>КАК МЫ РАБОТАЕМ</h2>
       </div>
 
       <div class="process container" data-aos="fade-up">
@@ -163,33 +169,9 @@
     </section>
     <!-- End of How We work section -->
 
-    <!-- ======= Clients Section ======= -->
-    <section id="clients">
-      <div class="container" data-aos="fade-up">
-        <div class="section-header">
-          <h2>Clients</h2>
-          <!-- <p style="font: 22px blue; font-style: italic;">Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p> -->
-        </div>
 
-        <div class="clients-slider swiper" data-aos="fade-up" data-aos-delay="100">
-          <!-- <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="assets/img/clients/client-1.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-2.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-3.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-4.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
-          </div> -->
-          <div></div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div>
-    </section><!-- End Clients Section -->
-
-    <section id="work-chart" data-aos="fade-right">
+<!-- TODO: WORK PROCESS FLOW CHART SECTION -->
+    <section id="work-chart" data-aos="fade-right"> 
       <div class="grid-5x1">
         <div class="guty">
           <div class="ikonki">
@@ -202,12 +184,12 @@
           <div class="ikonki">
             <img class="surat" src="images/icons/info.png" alt="sagat">
           </div>
-          <div class="shapes">Информация</div>
+          <div class="shapes even">Информация</div>
           <div class="work-chart-text">Защита объекта зависит от степени его уязвимости, расположения, площади и прочих характеристик</div>
         </div>
         <div class="guty">
           <div class="ikonki">
-            <img class="surat" src="images/icons/analyze (3).png" alt="search">
+            <img class="surat" src="images/icons/analyze1.png" alt="search">
           </div>
           <div class="shapes">Анализ</div>
           <div class="work-chart-text">Проведение тщательной проверки и анализа объекта для предоставления индивидуального комплекса мер по безопасности объекта
@@ -215,7 +197,7 @@
         </div>
         <div class="guty">
           <div class="ikonki"><img class="surat" src="images/icons/camera (3).png" alt=""></div>
-          <div class="shapes">Монтаж</div>
+          <div class="shapes even">Монтаж</div>
           <div class="work-chart-text">После согласования с Заказчиком происходит монтаж необходимого оборудования
           </div>
         </div>
@@ -227,6 +209,50 @@
         </div>
       </div>
     </section>
+<!-- WORK PROCESS FLOW CHART SECTION -->
+
+
+              <!-- ======= TODO: БЛАГОТВОРИТЕЛЬНОСТЬ ======= -->
+              <section id="about" style="padding-top: 50px;">
+                <div class="container section-header" style="margin-bottom: 0px;" data-aos="fade-up">
+                  <div class="row">
+                    <div class="content">
+                      <h2 class="lang text-center">БЛАГОТВОРИТЕЛЬНОСТЬ</h2>
+                        <h3 class="lang header text-center" key="about2">«Добрые дела дают силы нам самим 
+                          и побуждают к добрым поступкам других»</h3>
+                          <P>Хозяйственное общество «Зехинли доганлар» начиная с 2019 года занимается благотворительной деятельностью. Первый шаг был сделан в апреле 2019 года путем внесения денежных средств на строительство главной мечети Балканского велаята в городе Балканабат.</P>
+                          <P id="abzas">Так же до сегодняшнего дня была оказана материальная помощь </P>
+                          <ol class="list-sogap">
+                            <li>Реабилитационному Центру инвалидов Туркменистана в г. Ашгабат для обеспечения восстановительного лечения.</li>
+                            <li>Национальному Центру Специальной  Олимпиады Туркменистана (НЦСОТ) в приобретении спортивной экипировки, спортивного инвентаря для проведения предстоящих чемпионатов по видам спорта, где принимают участия люди с синдромом Дауна и инвалиды по интеллекту.</li>
+                            <li>Обществу глухонемых в г. Балканабат для улучшения условий содержания детей инвалидов.</li>
+                            <li>Предпринимателю Х. Годанову по созданию историко-краеведческого музея в г. Етрек Етрекского этрапа Балканского велаята.</li>
+                          </ol>
+                          <p>Хозяйственное общество «Зехинли доганлар» планирует продолжить благотворительную деятельность, так как лучший способ сохранить память о добрых делах-повторять их.</p>
+                    </div>
+                  </div>
+                </div>
+              </section><!-- End Diversifikasiya -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     
   <!-- Vendor JS Files -->
