--- a/about.html
+++ b/about.html
@@ -205,13 +205,12 @@
                       <h2 class="lang text-center">ДИВЕРСИФИКАЦИЯ ПРЕДПРИЯТИЯ</h2>
                         <h3 class="lang header" key="about2"></h3>
                         <p>С целью диверсификации деятельности хозяйственного общества в 2020 году была налажена работа по техническому обслуживанию автомобилей и предоставления услуг по общественному питанию, а также в январе 2021 года был заключен контракт с Агентством Государственной рыбоохраны и контролю за водными биоресурсами Туркменистана по добыче рыбы и биоресурсов  на Туркменской части акватории Каспийского моря. Кроме этого предприятие держит торговые отношения с такими странами как ОАЭ, Китай, Турция, Россия, Азербайджан и Казахстан.</p>
-                        <div class="balykcylyk container"><img class="img-fluid" src="images/autoservice/fdf.jpg" alt=""><h5 class="aciklama text-center" >Autoservice</h5></div>
-                        <div class="balykcylyk container"><img class="img-fluid" src="images/fishing/wild-files-marine-debris-removal.jpg" alt=""><h5 class="aciklama text-center">Fishing</h5></div>
+                        <div class="balykcylyk container"><img class="img-fluid" src="images/autoservice/fdf.jpg" alt=""><h5 class="aciklama text-center" >АВТО СЕРВИС</h5></div>
+                        <div class="balykcylyk container"><img class="img-fluid" src="images/fishing/wild-files-marine-debris-removal.jpg" alt=""><h5 class="aciklama text-center">рыболовство</h5></div>
                       </div>
                   </div>
                 </div>
               </section><!-- End Diversifikasiya -->
-    
 
               <!-- ======= TODO: БЛАГОТВОРИТЕЛЬНОСТЬ ======= -->
               <section id="about" style="padding-top: 50px;">
