--- a/index.html
+++ b/index.html
@@ -290,6 +290,52 @@
             </div>
         </section><!-- End Call To Action Section -->
 
+          <!-- TODO: WORK PROCESS FLOW CHART SECTION -->
+
+          <section id="work-chart" data-aos="fade-right" class="container"> 
+            <div class="section-header">
+              <h2 class="whywe lang" key="why_we" data-aos="fade-up"><br>КАК МЫ РАБОТАЕМ</h2>
+            </div>
+            <div class="grid-5x1">
+          <div class="guty">
+            <div class="ikonki">
+              <img class="surat" src="images/icons/contract.png" alt="sagat">
+            </div>
+            <div class="shapes">Договор</div>
+            <div class="work-chart-text">Заключение двухсторонних контрактов на основе взаимных договоренностей</div>
+          </div>
+          <div class="guty">
+            <div class="ikonki">
+              <img class="surat" src="images/icons/info.png" alt="sagat">
+            </div>
+            <div class="shapes even">Информация</div>
+            <div class="work-chart-text">Защита объекта зависит от степени его уязвимости, расположения, площади и прочих характеристик</div>
+          </div>
+          <div class="guty">
+            <div class="ikonki">
+              <img class="surat" src="images/icons/analyze1.png" alt="search">
+            </div>
+            <div class="shapes">Анализ</div>
+            <div class="work-chart-text">Проведение тщательной проверки и анализа объекта для предоставления индивидуального комплекса мер по безопасности объекта
+            </div>
+          </div>
+          <div class="guty">
+            <div class="ikonki"><img class="surat" src="images/icons/camera (3).png" alt=""></div>
+            <div class="shapes even">Монтаж</div>
+            <div class="work-chart-text ">После согласования с Заказчиком происходит монтаж необходимого оборудования
+            </div>
+          </div>
+          <div class="guty">
+            <div class="ikonki"><img class="surat" src="images/icons/guard (2).png" alt=""></div>
+            <div class="shapes">Защита</div>
+            <div class="work-chart-text">Гарантирование высокого качества предоставляемых услуг и оперативное реагирование и четкость действий сотрудников даже в самой нестандартной ситуации
+            </div>
+          </div>
+        </div>
+          <a class="learnmore lang" key="learn_more" href="about.html">Узнать больше</a>
+      </section>
+  <!-- WORK PROCESS FLOW CHART SECTION -->
+
     <!-- ======= Contact Section ======= -->
 
     <section id="contact">
