--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
     </section><!-- End About Section -->
 
       <!-- Start of How We work section -->
-      <section class="container">
+      <section class="container" id="howwe">
 
         <div class="section-header">
           <h2 class="whywe lang" key="why_we" data-aos="fade-up"><br>КАК МЫ РАБОТАЕМ</h2>
@@ -220,24 +220,24 @@
                     <div class="content">
                       <h2 class="lang text-center">БЛАГОТВОРИТЕЛЬНОСТЬ</h2>
                         <h3 class="lang header text-center" key="about2" style="font:28px; font-weight: bold;">«Добрые дела дают силы нам самим и побуждают к добрым поступкам других»</h3>
-                          <div class="row">
+                          <div class="row mb-3 mt-5">
                             <img class="img-fluid col-lg-3" src="images/ToreAhunMetjidi.jpg" alt="Töre Ahun Metjidi">
                             <P class="col-lg-9 text-end">Хозяйственное общество «Зехинли доганлар» начиная с 2019 года занимается благотворительной деятельностью. Первый шаг был сделан в апреле 2019 года путем внесения денежных средств на строительство главной мечети Балканского велаята в городе Балканабат.</P>
                           </div>
                           <!-- <P id="abzas">Так же до сегодняшнего дня была оказана материальная помощь</P> -->
-                            <div class="row">
+                            <div class="row mb-3 mt-5">
                               <div class="img-fluid col-lg-2 kletka sonra"><a target="_blank" href="images/minnetdarlyk.jpg"><img style="width:100%" src="images/minnetdarlyk.jpg" alt="Minnetdarlyk haty"></a></div>
                               <p class="col-lg-10 text-end">Реабилитационному Центру инвалидов Туркменистана в г. Ашгабат для обеспечения восстановительного лечения.</p>
                             </div>
-                            <div class="row">
+                            <div class="row mb-3 mt-5">
                               <div class="img-fluid col-lg-2 kletka sonra"><a target="_blank" href="images/minnetdarlyk.jpg"><img style="width:100%" src="images/minnetdarlyk.jpg" alt="Minnetdarlyk haty"></a></div>
                               <p class="col-lg-10 text-end">Национальному Центру Специальной  Олимпиады Туркменистана (НЦСОТ) в приобретении спортивной экипировки, спортивного инвентаря для проведения предстоящих чемпионатов по видам спорта, где принимают участия люди с синдромом Дауна и инвалиды по интеллекту.</p>
                             </div>
-                            <div class="row">
+                            <div class="row mb-3 mt-5">
                               <div class="img-fluid col-lg-2 kletka"><a target="_blank" href="images/minnetdarlyk.jpg"><img style="width:100%" src="images/minnetdarlyk.jpg" alt="Minnetdarlyk haty"></a></div>
                               <p class="col-lg-10 text-end">Обществу глухонемых в г. Балканабат для улучшения условий содержания детей инвалидов.</p>
                             </div>
-                            <div class="row">
+                            <div class="row mb-3 mt-5">
                               <div class="col-lg-2 kletka"><a target="_blank" href="images/telekeçi godanow.jpg"><img style="width:100%" src="images/telekeçi godanow.jpg" alt="Minnetdarlyk haty"></a></div>
                               <p class="col-lg-10 text-end">Предпринимателю Х. Годанову по созданию историко-краеведческого музея в г. Етрек Етрекского этрапа Балканского велаята.</p>
                             </div>
