--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <div class="flip-box-inner">
               <div class="flip-box-front">
                 <div class="kart__surat"><img src="images/logotype.png" alt=""></div>
-                <h2 class="lang" key="kartocka_fron_h2_4">Сопровождение грузов. <br> Машина сопровождения</h2>
+                <h2 class="lang" key="kartocka_fron_h2_4">Сопровождение грузов, машина сопровождения</h2>
               </div>
               <div class="flip-box-back">
                 <p class="lang" key="kartocka4">Данный вид охранной деятельности предполагает обеспечение транспортом, охраной и сопровождение Заказчика в течение 24 часов в сутки. По требованию Заказчика наша компания имеет возможность предоставлять водителей и охранников со знанием иностранных языков.</p>
@@ -332,7 +332,7 @@
             </div>
           </div>
         </div>
-          <a class="learnmore lang" key="learn_more" href="about.html">Узнать больше</a>
+          <a class="learnmore lang" key="learn_more" href="about.html#howwe">Узнать больше</a>
       </section>
   <!-- WORK PROCESS FLOW CHART SECTION -->
 
