--- a/about.html
+++ b/about.html
@@ -104,10 +104,13 @@
               <h3 class="lang header" key="about2"></h3>
               <p>Частное охранное предприятие «Зехинли доганлар» основано в 22-го июня 2016 года и перерегистрировано 29-го  мая 2020 года как хозяйственное общество, чтобы приобрести дополнительные коды по ГКВЭД. Предприятие действует на основании Единого государственного реестра № 24594443 от 29-го мая 2020 года и Устава предприятия, выданного Министерством Экономики и Развития Туркменистана.</p>
               <p>Основной деятельностью хозяйственного общество является предоставления охранных услуг, специализирующейся на услугах по физической и пультовой  охране объектов, и их периметра. В перечень услуг компании входят  невооруженная охрана объектов и имущества, обеспечение внутри объектного и пропускного режима на объектах, монтаж и техническое обслуживание охранной и тревожной сигнализации. Компания предоставляет охранные услуги как частным лицам, так и мелким и крупным предприятиям, а так же иностранным компаниям, работающим на территории Туркменистана.</p>
-              <p>Свою охранную деятельность хозяйственное общество    «Зехинли доганлар» осуществляет по единому ГКВЭД (Государственный классификатор видов экономической деятельности), введенному 01.01.2014 года, раздел 80, группа 80.1, класс 80.10, который включает в себя деятельность охранников, сторожей, вахтеров, караульных служб и группа 80.2, класс 80.20, включающий в себя обеспечение функционирования систем безопасности.</p>
-              <p>    Хозяйственное общество «Зехинли доганлар» имеет все необходимые нормативные документы и ресурсы для выполнения охранных услуг, в том числе транспорт и СИЗ для охранников. Компания предоставляет квалифицированных охранников с опытом работы, которые работают круглосуточно в течение 7 (семи) дней в неделю. Охранные услуги осуществляются 24 часа в сутки.</p>
+              <p>Свою охранную деятельность хозяйственное общество «Зехинли доганлар» осуществляет по единому ГКВЭД (Государственный классификатор видов экономической деятельности), введенному 01.01.2014 года, раздел 80, группа 80.1, класс 80.10, который включает в себя деятельность охранников, сторожей, вахтеров, караульных служб и группа 80.2, класс 80.20, включающий в себя обеспечение функционирования систем безопасности.</p>
+              <p>Хозяйственное общество «Зехинли доганлар» имеет все необходимые нормативные документы и ресурсы для выполнения охранных услуг, в том числе транспорт и СИЗ для охранников. Компания предоставляет квалифицированных охранников с опытом работы, которые работают круглосуточно в течение 7 (семи) дней в неделю. Охранные услуги осуществляются 24 часа в сутки.</p>
               <p> Также предприятие освобождает Заказчика от всяких видов рисков, касающихся здоровья работников охраны, травматизма на рабочем месте и др. так как работники застрахованы против возможных рисков травматизма на рабочем месте.</p>
-              <p>С июля 2016 года до июля 2022 года наше предприятие оказывало охранные услуги южнокорейской компании «HYUNDAI ENGINEERING Co. LTD» по проекту TACE - строительство завода по производству полиэтилена и полипропилена с установкой крекинга этана, на территории поселка Киянлы, Туркменбашинского этрапа  и проекту TORE – проектирование, закупка и строительство установок вакуумной перегонки мазута, алкилирование легких олефинов, смешивание бензинов, расположенных на территории Туркменбашинского КНПЗ, вахтового городка в г. Туркменбаши Балканского велаята Туркменистана.</p>
+              <div class="row">
+                <p class="col-11">С июля 2016 года до июля 2022 года наше предприятие оказывало охранные услуги южнокорейской компании «HYUNDAI ENGINEERING Co. LTD» по проекту TACE - строительство завода по производству полиэтилена и полипропилена с установкой крекинга этана, на территории поселка Киянлы, Туркменбашинского этрапа  и проекту TORE – проектирование, закупка и строительство установок вакуумной перегонки мазута, алкилирование легких олефинов, смешивание бензинов, расположенных на территории Туркменбашинского КНПЗ, вахтового городка в г. Туркменбаши Балканского велаята Туркменистана.</p>
+                <div class="col-1 hyundai"><a target="_blank" href="images/Recomment letter from HEC.jpg"><img style="width:100%" src="images/Recomment letter from HEC.jpg" alt="Minnetdarlyk haty"></a></div>
+              </div>
               <p>Хозяйственное общество «Зехинли доганлар» активно участвует в тендерах, проводимых иностранными компаниями таких как CNPC International (T-n), ENI (T-n), Petronas Çarigali (T-n), работающих на основании договора  по распределению продукции и Закона Туркменистана «Об углеводородных ресурсах», а так же южнокорейской компании «Hyundai Engineering Co. Ltd».</p>
               <p>Цель компании соответствует его девизу «Целостность и сохранность», так как основной задачей является принятие оперативных мер по предотвращению несанкционированных проникновений, а так же обеспечения целостности и сохранности имущества охраняемого объекта.</p>
               <p>Обратитесь к нам и Вы сохраните свое имущество в целостности и сохранности!</p>
@@ -149,8 +152,9 @@
             <div class="process_item lang">Гарантирование высокого качества предоставляемых услуг и оперативное реагирование и четкость действий сотрудников даже в самой нестандартной ситуации</div>
             <div class="process_icon"><img src="images/icons/safety (7).png" alt=""></div>
           </div>
-  
-        </div>
+          </div>
+
+          
   
       </section>
       <!-- End of How We work section -->
