--- a/services.html
+++ b/services.html
@@ -88,52 +88,41 @@
     <section id="service-page">
         <div class="container" data-aos="zoom-out">
           <div class="row">
-            <div class="col-12 text-center text-lg-start">
-              <h3 class="cta-title">«Зехинли доганлар» - надежный представитель
-                в сфере охранных услуг
-                </h3>
-              <p class="cta-text"> Конкурентным преимуществом нашей компании являться широкий спектр услуг, включая услуги как физической, так и пультовой охраны. В связи с этим компания предоставляет следующие виды охранных услуг:
-                <br>1.	Невооруженная охрана дневная
-                <br>2.   Невооруженная охрана ночная
-                <br>3.	Охрана вахтовым методом
-                <br>4.	Обеспечение внутри объектного и пропускного режимов
-                <br>5.	Сопровождение грузов
-                <br>6.	Машина сопровождения
-                <br>7.	Монтаж системы объектовой охраны
-                <br>8.	Обслуживание системы объектовой охраны
-                <br><br>
-                Мы адаптируем наши услуги под индивидуальные потребности каждого Заказчика. Обеспечиваем надежное сотрудничество на основе заключения официальных договоров  с гибким и лояльным ценообразованием. 
-                </p>
-            </div>
-            <div class="col-lg-3 cta-btn-container text-center">
+            <div class="col-12 text-center">
+              <h3 class="cta-title">«Зехинли доганлар» - надежный представитель в сфере охранных услуг</h3>
+              <p class="cta-text text-center text-lg-start">Конкурентным преимуществом нашей компании являться широкий спектр услуг, включая услуги как физической, так и пультовой охраны. В связи с этим компания предоставляет следующие виды охранных услуг:</p>
+                  <ol class="text-lg-start">
+                    <li>Невооруженная охрана дневная</li>
+                    <li>Невооруженная охрана ночная</li>
+                    <li>Охрана вахтовым методом</li>
+                    <li>Обеспечение внутри объектного и пропускного режимов</li>
+                    <li>Сопровождение грузов</li>
+                    <li>Машина сопровождения</li>
+                    <li>Монтаж системы объектовой охраны</li>
+                    <li>Обслуживание системы объектовой охраны</li>
+                  </ol>
+                <p class="cta-text text-center text-lg-start">Мы адаптируем наши услуги под индивидуальные потребности каждого Заказчика. Обеспечиваем надежное сотрудничество на основе заключения официальных договоров  с гибким и лояльным ценообразованием. </p>
             </div>
           </div>
         </div>
       </section><!-- End Call To Action Section -->
 
-  <main id="main">
 
+  <main id="main">
     <!-- ======= About Section ======= -->
     <section id="about">
       <div class="container" data-aos="fade-up">
         <div class="row">
-          <div class="col-lg-6 about-img">
+          <div class="about-img">
             <img src="assets/img/about-img.jpg" alt="">
           </div>
 
-          <div class="col-lg-6 content">
+          <div class="content">
             <h2>Услуги</h2>
             <h3>«Зехинли доганлар» - надежный представитель
               в сфере охранных услуг
               </h3>
               <h3>Конкурентным преимуществом нашей компании являться широкий спектр услуг, включая услуги как физической, так и пультовой охраны. В связи с этим компания предоставляет следующие виды охранных услуг:</h3>
-
-            <ul>
-              <li><i class="bi bi-check-circle"></i> Невооруженная охрана дневная</li>
-              <li><i class="bi bi-check-circle"></i> Невооруженная охрана ночная</li>
-              <li><i class="bi bi-check-circle"></i> </li>
-            </ul>
-
           </div>
         </div>
 
