--- a/services.html
+++ b/services.html
@@ -103,14 +103,41 @@
 
               <!-- TODO:  tablisa-->
           <table>
+          <thead>
             <tr>
-              <th>
-              <td>No</td>
-              <td>Наименование</td>
-              <td>Описание</td>
-              <td>Стоимость</td>
-            </th>
-            </tr>
+            <th>№</th>
+            <th>Наименование</th>
+            <th>Описание</th>
+            <th>Стоимость</th>
+          </tr>
+          </thead>
+          <tr>
+            <td colspan="4">Услуги физической охраны объектов</td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Невооруженная охрана дневная</td>
+            <td>Дневная охрана без оружия (минимальный заказ – 12 часов)</td>
+            <td>договорная</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Невооруженная охрана ночная</td>
+            <td>Ночная охрана без оружия (минимальный заказ – 12 часов)</td>
+            <td>договорная</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Охрана вахтовым методом</td>
+            <td>Охрана вахтовым методом</td>
+            <td>договорная</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Обеспечение внутри объектного и пропускного режимов</td>
+            <td>Обеспечение внутри объектного и пропускного режимов</td>
+            <td>договорная</td>
+          </tr>
           </table>
   
             <p>Наша основная задача предоставлять безупречные услуги охраны, которые превосходят ожидания и потребности наших клиентов, в основе которых лежат честность и профессионализм. Наша работа направлена на разработку уникальных решений для безопасности наших клиентов, которые соответствует реалиям сегодняшнего дня.</p>
