--- a/services.html
+++ b/services.html
@@ -112,7 +112,7 @@
           </tr>
           </thead>
           <tr>
-            <td colspan="4">Услуги физической охраны объектов</td>
+            <td colspan="4" style="text-align: center; font-size: larger; font-weight: bolder;">Услуги физической охраны объектов</td>
           </tr>
           <tr>
             <td>1</td>
@@ -138,6 +138,37 @@
             <td>Обеспечение внутри объектного и пропускного режимов</td>
             <td>договорная</td>
           </tr>
+          <tr>
+            <td colspan="4" style="text-align: center; font-size: larger; font-weight: bolder;">Услуги по сопровождению грузов</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Сопровождение грузов</td>
+            <td>Сопровождение грузов охранником</td>
+            <td>договорная</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>Машина сопровождения</td>
+            <td>Машина сопровождения (2 охранника)</td>
+            <td>договорная</td>
+          </tr>
+          <tr>
+            <td colspan="4" style="text-align: center; font-size: larger; font-weight: bolder;">Услуги пультовой охраны</td>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td>Монтаж системы объектовой охраны</td>
+            <td>Монтаж системы объектовой охраны малой, средней, большой емкости</td>
+            <td>договорная</td>
+          </tr>
+          <tr>
+            <td>8</td>
+            <td>Обслуживание системы объектовой охраны</td>
+            <td>Техническое обслуживание систем объектовой охраны малой, средней, большой емкости</td>
+            <td>договорная</td>
+          </tr>
+
           </table>
   
             <p>Наша основная задача предоставлять безупречные услуги охраны, которые превосходят ожидания и потребности наших клиентов, в основе которых лежат честность и профессионализм. Наша работа направлена на разработку уникальных решений для безопасности наших клиентов, которые соответствует реалиям сегодняшнего дня.</p>
