--- a/services.html
+++ b/services.html
@@ -102,72 +102,74 @@
           
 
               <!-- TODO:  tablisa-->
-          <table>
-          <thead>
+          <table class="table table-responsive table-hover table-bordered border-primary">
+          <thead >
             <tr>
-            <th>№</th>
-            <th>Наименование</th>
-            <th>Описание</th>
-            <th>Стоимость</th>
+            <th scope="col">№</th>
+            <th scope="col">Наименование</th>
+            <th scope="col">Описание</th>
+            <th scope="col">Стоимость</th>
           </tr>
           </thead>
-          <tr>
-            <td colspan="4" style="text-align: center; font-size: larger; font-weight: bolder;">Услуги физической охраны объектов</td>
-          </tr>
-          <tr>
-            <td>1</td>
-            <td>Невооруженная охрана дневная</td>
-            <td>Дневная охрана без оружия (минимальный заказ – 12 часов)</td>
-            <td>договорная</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Невооруженная охрана ночная</td>
-            <td>Ночная охрана без оружия (минимальный заказ – 12 часов)</td>
-            <td>договорная</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Охрана вахтовым методом</td>
-            <td>Охрана вахтовым методом</td>
-            <td>договорная</td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>Обеспечение внутри объектного и пропускного режимов</td>
-            <td>Обеспечение внутри объектного и пропускного режимов</td>
-            <td>договорная</td>
-          </tr>
-          <tr>
-            <td colspan="4" style="text-align: center; font-size: larger; font-weight: bolder;">Услуги по сопровождению грузов</td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td>Сопровождение грузов</td>
-            <td>Сопровождение грузов охранником</td>
-            <td>договорная</td>
-          </tr>
-          <tr>
-            <td>6</td>
-            <td>Машина сопровождения</td>
-            <td>Машина сопровождения (2 охранника)</td>
-            <td>договорная</td>
-          </tr>
-          <tr>
-            <td colspan="4" style="text-align: center; font-size: larger; font-weight: bolder;">Услуги пультовой охраны</td>
-          </tr>
-          <tr>
-            <td>7</td>
-            <td>Монтаж системы объектовой охраны</td>
-            <td>Монтаж системы объектовой охраны малой, средней, большой емкости</td>
-            <td>договорная</td>
-          </tr>
-          <tr>
-            <td>8</td>
-            <td>Обслуживание системы объектовой охраны</td>
-            <td>Техническое обслуживание систем объектовой охраны малой, средней, большой емкости</td>
-            <td>договорная</td>
-          </tr>
+          <tbody>
+            <tr>
+              <td colspan="4" style="text-align: center; font-size: larger; font-weight: bolder;">Услуги физической охраны объектов</td>
+            </tr>
+            <tr>
+              <th scope="row">1</th>
+              <td>Невооруженная охрана дневная</td>
+              <td>Дневная охрана без оружия (минимальный заказ – 12 часов)</td>
+              <td>договорная</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Невооруженная охрана ночная</td>
+              <td>Ночная охрана без оружия (минимальный заказ – 12 часов)</td>
+              <td>договорная</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Охрана вахтовым методом</td>
+              <td>Охрана вахтовым методом</td>
+              <td>договорная</td>
+            </tr>
+            <tr>
+              <th scope="row">4</th>
+              <td>Обеспечение внутри объектного и пропускного режимов</td>
+              <td>Обеспечение внутри объектного и пропускного режимов</td>
+              <td>договорная</td>
+            </tr>
+            <tr>
+              <td colspan="4" style="text-align: center; font-size: larger; font-weight: bolder;">Услуги по сопровождению грузов</td>
+            </tr>
+            <tr>
+              <th scope="row">5</th>
+              <td>Сопровождение грузов</td>
+              <td>Сопровождение грузов охранником</td>
+              <td>договорная</td>
+            </tr>
+            <tr>
+              <th scope="row">6</th>
+              <td>Машина сопровождения</td>
+              <td>Машина сопровождения (2 охранника)</td>
+              <td>договорная</td>
+            </tr>
+            <tr>
+              <td colspan="4" style="text-align: center; font-size: larger; font-weight: bolder;">Услуги пультовой охраны</td>
+            </tr>
+            <tr>
+              <th scope="row">7</th>
+              <td>Монтаж системы объектовой охраны</td>
+              <td>Монтаж системы объектовой охраны малой, средней, большой емкости</td>
+              <td>договорная</td>
+            </tr>
+            <tr>
+              <th scope="row">8</th>
+              <td>Обслуживание системы объектовой охраны</td>
+              <td>Техническое обслуживание систем объектовой охраны малой, средней, большой емкости</td>
+              <td>договорная</td>
+            </tr>
+          </tbody>
 
           </table>
   
